# engineering-designs

./: NEW_README.md  README.md  dd.template.md  prd.template.md
.github/workflows/: redo-typo-pr.yml
attic/: README.md
docs/bls-keys/: dd.md
docs/build-ahead/: dd.md
docs/building-in-chunks/: batch-propose.md  building.md  circuits.md  dd.md  index.md  messages.md  slashing.md  syncing.md
docs/chain-finalization-names/: rfc.md
docs/committing-forks/: dd.md
docs/custom-slashing/: dd.md  dd.template.md
docs/escape-hatch/: dd.md
docs/faucets/: dd.md  prd.md
docs/fees/: design.md
docs/fees/notebook/: README.md  blocks.pkl  fee-model.py  pyproject.toml
docs/governance-staking-escrow/: dd.md
docs/keys-config/: prd.md
docs/locked-inflation/: prd.md
docs/slashing-sim/: .gitignore  README.md  benchmark.py  collector.py  committee.py  events.py  models.py  network.py  pyproject.toml  simulation.py  simulation_notebook.py  simulator.py  validator.py  view_events.py
in-progress/: 0003-native-merkle-trees.md  12487-prd-fast-sync.md  12639-prd-inactivity-leak.md  5040-native-merkle-trees-napi.md  6973-refactor-base-contract-interaction.md  7025-instrumenting-the-node-with-open-telemetry.md  7228-unified-bbjs-interface.md  7346-batch-proving-circuits-and-l1.md  7482-sequencer-prover-test-net.md  7520-mainnet-overview.md  7520-testnet-overview.md  7588-spartan-clusters.md  8131-forced-inclusion.md  8403-blobbity-boo.md  8404-based-fallback.md  8754-slashing-and staking.md  NNNN-off-chain-contract-registry.md  slashing.md
scripts/: redo-typo-pr
(+40 files in other folders)
