[project]
name = "simple-fee-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eth-ape[recommended-plugins]",
    "ipykernel>=6.29.5",
    "marimo>=0.13.2",
    "matplotlib>=3.9.2",
    "numpy>=1.26.4",
    "pydantic>=2.9.2",
    "ruff>=0.14.13",
]
